--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "These are the projects that I made during my Agentic Journey"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "brevo-python>=1.2.0",
     "anthropic>=0.49.0",
     "autogen-agentchat>=0.4.9.2",
     "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
