--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "langchain-community>=0.3.20",
     "langchain-experimental>=0.3.4",
     "langchain-openai>=0.3.9",
+    "langchain-deepseek>=0.1.4",
     "langgraph>=0.3.18",
     "langgraph-checkpoint-sqlite>=2.0.6",
     "langsmith>=0.3.18",
